--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
   "bugs": {
     "url": "https://github.com/zoe-rowe8/myFlix-client/issues"
   },
-  "homepage": "https://github.com/zoe-rowe8/myFlix-client#readme"
+  "homepage": "https://github.com/zoe-rowe8/myFlix-client#readme",
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  }
 }
