--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
-    "react-dom": "^18.2.0",
-    "react-router": "^6.8.2",
-    "react-router-dom": "^6.8.2"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
